currently working on getting the stories to display in HomePage component

--- a/backend/package.json
+++ b/backend/package.json
@@ -17,7 +17,8 @@
     "db:seed:undo:all": "dotenv sequelize-cli db:seed:undo:all",
     "db:drop": "dotenv sequelize-cli db:drop",
     "db:create": "dotenv sequelize-cli db:create",
-    "db:reset": "npm run db:drop && npm run db:create && npm run db:migrate && npm run db:seed:all"
+    "db:reset": "npm run db:drop && npm run db:create && npm run db:migrate && npm run db:seed:all",
+    "rebuild": "npx dotenv sequelize-cli db:seed:undo:all && npx dotenv sequelize-cli db:migrate:undo:all && npx dotenv sequelize-cli db:migrate && npx dotenv sequelize-cli db:seed:all"
   },
   "keywords": [],
   "author": "",
